Inclusão de cálculos de encargos
